tests/ui/parser/issues/issue-27255.stderr
error: missing `for` in a trait impl
  --> $DIR/issue-27255.rs:3:7
   |
LL | impl A .. {}
   |       ^ help: add `for` here

error: missing `for` in a trait impl
  --> $DIR/issue-27255.rs:7:7
   |
LL | impl A      usize {}
   |       ^^^^^^ help: add `for` here

error: `impl Trait for .. {}` is an obsolete syntax for auto traits
  --> $DIR/issue-27255.rs:3:1
   |
LL | impl A .. {}
   | ^^^^^^^^^^^^
   |
   = help: use `#[rustc_auto_trait] trait Trait {}` instead

error: aborting due to 3 previous errors

